# scout

./: Cargo.toml
scripts/bazaar/: Cargo.toml
scripts/bazaar/src/: lib.rs
scripts/helloworld/: Cargo.toml
src/: main.rs
